# FakerPy-CediGaming

./: .gitignore  README.md  __init__.py  enums.py  person.py  setup.cfg
data/: first_names.json
src/FakerPy.egg-info/: PKG-INFO  SOURCES.txt
src/fakerpy/: person.py
src/fakerpy_CediGaming.egg-info/: PKG-INFO  SOURCES.txt
