[metadata]
name = fakerpy-CediGaming
version = 0.0.2.1
author = CediGaming
author_email = 
description = Open-source Fake-Data-Generator for Python.
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/CediGaming/fakerpy
project_urls =
    Bug Tracker = https://github.com/CediGaming/fakerpy/issues
classifiers =
    Programming Language :: Python :: 3
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.8

[options.packages.find]
where = src
